--- a/SimpleLoginScreen/Base.lproj/Main.storyboard
+++ b/SimpleLoginScreen/Base.lproj/Main.storyboard
@@ -119,6 +119,9 @@
                                 <state key="normal" title="Back">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="nz9-Vu-dO3" kind="unwind" unwindAction="UnwindFromVCWithUnwindSegue:" id="Eef-v5-rWR"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="yhq-zg-6sZ">
                                 <rect key="frame" x="35" y="116.5" width="250" height="146"/>
@@ -173,6 +176,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P0v-Dr-kmW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="nz9-Vu-dO3" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="830" y="-284"/>
         </scene>
@@ -199,6 +203,9 @@
                                 <state key="normal" title="Back">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="I4y-VI-8zy" kind="unwind" unwindAction="UnwindFromVCWithUnwindSegue:" id="Hgo-y7-RYc"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="nNF-hu-HF7">
                                 <rect key="frame" x="35" y="113.5" width="250" height="250"/>
@@ -259,6 +266,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9qu-8h-TkT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="I4y-VI-8zy" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="830" y="390"/>
         </scene>
