--- a/SimpleLoginScreen/Base.lproj/Main.storyboard
+++ b/SimpleLoginScreen/Base.lproj/Main.storyboard
@@ -52,30 +52,31 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="k92-1k-RSz"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="SIGN IN">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tgd-W0-P4r">
-                                <rect key="frame" x="102" y="460" width="116" height="29"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tgd-W0-P4r">
+                                <rect key="frame" x="88" y="460" width="144" height="37"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
                                 <state key="normal" title="Forgot password?">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
                                     <segue destination="FFl-pf-Xpg" kind="show" id="zLG-wg-1TG"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hEf-po-E4o">
-                                <rect key="frame" x="57" y="528" width="206" height="30"/>
+                            <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hEf-po-E4o">
+                                <rect key="frame" x="31" y="528" width="258" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="oM2-p0-QuD"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
                                 <state key="normal" title="Don't have an account? Sign Up">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                                 <connections>
                                     <segue destination="AWb-lR-m8f" kind="show" id="V2V-D5-CcP"/>
@@ -120,6 +121,15 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
+                            <visualEffectView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Up-GD-pYx">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="X1l-V7-8yv">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reset Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sih-1R-aZu">
                                 <rect key="frame" x="99.5" y="36" width="121.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -127,9 +137,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HG8-hc-q3L">
-                                <rect key="frame" x="16" y="40" width="32" height="13"/>
+                                <rect key="frame" x="16" y="32" width="32" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="13" id="z38-KM-bD1"/>
+                                    <constraint firstAttribute="height" constant="29" id="z38-KM-bD1"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Back">
@@ -150,7 +160,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="43" id="Ty3-Ok-GZo"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="12"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -162,12 +172,13 @@
                                             </textField>
                                         </subviews>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSK-wi-Krm">
+                                    <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSK-wi-Krm">
                                         <rect key="frame" x="0.0" y="96" width="250" height="50"/>
                                         <color key="backgroundColor" red="0.3597242236" green="0.28174263240000003" blue="0.239110291" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="ole-EY-mMZ"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <inset key="titleEdgeInsets" minX="1" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <state key="normal" title="RESET PASSWORD">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -175,15 +186,6 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <visualEffectView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Up-GD-pYx">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="X1l-V7-8yv">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                </view>
-                                <blurEffect style="light"/>
-                            </visualEffectView>
                         </subviews>
                         <color key="backgroundColor" red="0.1033763661980629" green="0.60902023315429688" blue="0.77111941576004028" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -193,7 +195,7 @@
                             <constraint firstItem="Sih-1R-aZu" firstAttribute="top" secondItem="gfy-mB-ej3" secondAttribute="top" constant="16" id="Fhc-jK-UoG"/>
                             <constraint firstItem="yhq-zg-6sZ" firstAttribute="leading" secondItem="jbJ-zN-Ao6" secondAttribute="leading" constant="35" id="IRG-s9-l7j"/>
                             <constraint firstAttribute="trailing" secondItem="yhq-zg-6sZ" secondAttribute="trailing" constant="35" id="Qsd-4B-36B"/>
-                            <constraint firstItem="HG8-hc-q3L" firstAttribute="top" secondItem="gfy-mB-ej3" secondAttribute="top" constant="20" id="hH3-2c-qeS"/>
+                            <constraint firstItem="HG8-hc-q3L" firstAttribute="top" secondItem="gfy-mB-ej3" secondAttribute="top" constant="12" id="hH3-2c-qeS"/>
                             <constraint firstItem="Sih-1R-aZu" firstAttribute="centerX" secondItem="gfy-mB-ej3" secondAttribute="centerX" id="nio-Yx-rx6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gfy-mB-ej3"/>
@@ -232,9 +234,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ENr-GU-JFl">
-                                <rect key="frame" x="16" y="37" width="32" height="13"/>
+                                <rect key="frame" x="16" y="29" width="32" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="13" id="LIw-Lq-3F7"/>
+                                    <constraint firstAttribute="height" constant="29" id="LIw-Lq-3F7"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Back">
@@ -271,12 +273,13 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Ig-Lk-fOm">
+                                    <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Ig-Lk-fOm">
                                         <rect key="frame" x="0.0" y="200" width="250" height="50"/>
                                         <color key="backgroundColor" red="0.3597242236" green="0.28174263240000003" blue="0.239110291" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="iMN-os-V6N"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="SIGN UP">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
@@ -291,7 +294,7 @@
                             <constraint firstItem="PZk-89-Idf" firstAttribute="top" secondItem="UmZ-ah-ray" secondAttribute="top" constant="13" id="JaV-JJ-1yl"/>
                             <constraint firstItem="nNF-hu-HF7" firstAttribute="top" secondItem="PZk-89-Idf" secondAttribute="bottom" constant="60" id="KOs-lm-jx3"/>
                             <constraint firstItem="UmZ-ah-ray" firstAttribute="trailing" secondItem="nNF-hu-HF7" secondAttribute="trailing" constant="35" id="heC-fV-lhO"/>
-                            <constraint firstItem="ENr-GU-JFl" firstAttribute="top" secondItem="UmZ-ah-ray" secondAttribute="top" constant="17" id="pfT-P2-DS5"/>
+                            <constraint firstItem="ENr-GU-JFl" firstAttribute="top" secondItem="UmZ-ah-ray" secondAttribute="top" constant="9" id="pfT-P2-DS5"/>
                             <constraint firstItem="PZk-89-Idf" firstAttribute="centerX" secondItem="rGW-lZ-qfC" secondAttribute="centerX" id="ssn-JK-lmC"/>
                             <constraint firstItem="PZk-89-Idf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ENr-GU-JFl" secondAttribute="trailing" constant="8" symbolic="YES" id="wHh-Fx-ljB"/>
                         </constraints>
