--- a/SimpleLoginScreen/Base.lproj/Main.storyboard
+++ b/SimpleLoginScreen/Base.lproj/Main.storyboard
@@ -306,6 +306,54 @@
             </objects>
             <point key="canvasLocation" x="828.75" y="389.78873239436621"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="tZY-wK-Ecs">
+            <objects>
+                <viewController id="dcQ-5p-l2e" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8uI-Wl-kgM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="spinning-space-vortex-warp-tunnel-background-free-thumb49" translatesAutoresizingMaskIntoConstraints="NO" id="9Ok-tl-NWx">
+                                <rect key="frame" x="0.0" y="0.0" width="327" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GLf-bc-Kjz">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="EVv-Sd-poZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Umbrella" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d31-sI-QgE">
+                                <rect key="frame" x="78" y="36" width="164" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnL-cU-zIN">
+                                <rect key="frame" x="139" y="77" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="d31-sI-QgE" firstAttribute="centerX" secondItem="8uI-Wl-kgM" secondAttribute="centerX" id="CKP-kb-lcD"/>
+                            <constraint firstItem="hnL-cU-zIN" firstAttribute="centerX" secondItem="8uI-Wl-kgM" secondAttribute="centerX" id="Mw5-8K-056"/>
+                            <constraint firstItem="d31-sI-QgE" firstAttribute="top" secondItem="YY5-nm-ag7" secondAttribute="top" constant="16" id="dmt-Yi-JaY"/>
+                            <constraint firstItem="hnL-cU-zIN" firstAttribute="top" secondItem="d31-sI-QgE" secondAttribute="bottom" constant="20" id="j7S-Ta-V89"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="YY5-nm-ag7"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RMg-LV-4nG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1601.25" y="47.535211267605632"/>
+        </scene>
     </scenes>
     <resources>
         <image name="spinning-space-vortex-warp-tunnel-background-free-thumb49" width="800" height="600"/>
